Issue #15142: Fix reference leak when deallocating instances of types created using PyType_FromSpec().